# mechrevo-wujie14-kmod

./: .gitignore  CMakeLists.txt  Kbuild  Makefile  README.md  dkms.conf  dkms.conf.in  wujie14-kb.c  wujie14-kb.h  wujie14-km.c  wujie14-km.conf  wujie14-km.h  wujie14-perfmode.c  wujie14-perfmode.h  wujie14-wmi-event.c  wujie14-wmi-event.h
plasma-platform-profile/: package.plasmoid
plasma-platform-profile/package/: metadata.desktop  metadata.json
plasma-platform-profile/package/contents/ui/: ConfigGeneral.qml  main.qml
